Fixed special characters

--- a/2.Actors, Goals, and Messaging Transactions/3.Use Case Descriptions/1.Use Case 1 - Send Immunization History.html
+++ b/2.Actors, Goals, and Messaging Transactions/3.Use Case Descriptions/1.Use Case 1 - Send Immunization History.html
@@ -6,7 +6,7 @@
 </p>
 <p>
 	<strong>
-  Supporting HL7 version 2.5.1 Message Type: VXU – Profile Z22
+  Supporting HL7 version 2.5.1 Message Type: VXU &mdash; Profile Z22
  </strong>
 </p>
 <p>
