--- a/2.Actors, Goals, and Messaging Transactions/3.Use Case Descriptions/2.Use Case 2 - Request Complete Immunization History.html
+++ b/2.Actors, Goals, and Messaging Transactions/3.Use Case Descriptions/2.Use Case 2 - Request Complete Immunization History.html
@@ -6,7 +6,7 @@
 </p>
 <p>
 	<strong>
-  Supporting HL7 Version 2.5.1 Message Type: QBP –Profile Z34 and RSP –Profile Z32.
+  Supporting HL7 Version 2.5.1 Message Type: QBP &mdash; Profile Z34 and RSP &mdash; Profile Z32.
  </strong>
 </p>
 <p>
