--- a/2.Actors, Goals, and Messaging Transactions/3.Use Case Descriptions/5.Use Case 5 - Acknowledge Receipt.html
+++ b/2.Actors, Goals, and Messaging Transactions/3.Use Case Descriptions/5.Use Case 5 - Acknowledge Receipt.html
@@ -6,6 +6,6 @@
 </p>
 <p>
 	<strong>
-  Supporting HL7 Version 2.5.1 Message Type: ACK –Profile Z23 and RSP – Profile Z33.
+  Supporting HL7 Version 2.5.1 Message Type: ACK &mdash; Profile Z23 and RSP &mdash; Profile Z33.
  </strong>
 </p>
