--- a/2.Actors, Goals, and Messaging Transactions/6.Key Technical Decisions/5.Conventions.html
+++ b/2.Actors, Goals, and Messaging Transactions/6.Key Technical Decisions/5.Conventions.html
@@ -1,4 +1,4 @@
-<p>
+<p>data
  This guide adheres to the following conventions:
 </p>
 <ul>
@@ -15,7 +15,7 @@
   No conformance information is provided for optional message elements. This includes length, usage, cardinality, value sets and descriptive information. Implementers who want to use optional message elements should refer to the base HL7 V2.5.1 Standard to determine how these optional message elements will be used.
  </li>
 	<li>
-  This guide uses “X” as a conformance usage indicator very sparingly. Where the underlying standard indicates the segments/field/component is present for backwards compatibility (“B”) or withdrawn ("W") an “X” will be used. Some conditional elements may have a usage of “X” if the predicate condition is the only case where the element is used. For all other fields/components “O” is used to enable trading partners to explore additional capabilities. Note that without a clearly agreed to complementary profile between trading partners, a sender does not have to send any elements marked as an "O", nor does a receiver have to process any elements marked as an "O".
+  This guide uses "X" as a conformance usage indicator very sparingly. Where the underlying standard indicates the segments/field/component is present for backwards compatibility ("B") or withdrawn ("W") an "X" will be used. Some conditional elements may have a usage of "X" if the predicate condition is the only case where the element is used. For all other fields/components "O" is used to enable trading partners to explore additional capabilities. Note that without a clearly agreed to complementary profile between trading partners, a sender does not have to send any elements marked as an "O", nor does a receiver have to process any elements marked as an "O".
  </li>
 </ul>
 <hr/>
@@ -29,13 +29,13 @@
 	<sup>
   6
  </sup>
- A Master Person Index is used by some health data systems to cross-reference a person’s identifiers across these systems. If system A needs the person’s id from system B, then it may retrieve it from the MPI. The Patient Idenitifying Cross-referencing (PIX) query asks for one system’s personal identifier, based on another system’s identifier. PIX is a profile published by Integrating the Healthcare Enterprise (IHE).
+ A Master Person Index is used by some health data systems to cross-reference a person's identifiers across these systems. If system A needs the person's id from system B, then it may retrieve it from the MPI. The Patient Idenitifying Cross-referencing (PIX) query asks for one system's personal identifier, based on another system's identifier. PIX is a profile published by Integrating the Healthcare Enterprise (IHE).
 </p>
 <p>
 	<sup>
   7
  </sup>
- The definition of “exact” is a local business rule and should be documented locally.
+ The definition of "exact" is a local business rule and should be documented locally.
 </p>
 <p>
 	<sup>
@@ -47,7 +47,7 @@
 	<sup>
   9
  </sup>
- The definition of “exact” is a local business rule and should be documented locally.
+ The definition of "exact" is a local business rule and should be documented locally.
 </p>
 <p>
 	<sup>
@@ -59,7 +59,7 @@
 	<sup>
   11
  </sup>
- Identifying which client’s record to send is an important consideration, but outside the scope of this document.
+ Identifying which client's record to send is an important consideration, but outside the scope of this document.
 </p>
 <p>
 	<sup>
