--- a/3.HL7 Messaging Infrastructure/2.HL7 definitions.html
+++ b/3.HL7 Messaging Infrastructure/2.HL7 definitions.html
@@ -30,7 +30,7 @@
 		<tr>
 			<td class="fr-thick" style="width: 5.9405%;">
 				<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
-     MSH|…
+     MSH|
     </span>
 				<br/>
 			</td>
@@ -41,7 +41,7 @@
 		<tr>
 			<td class="fr-thick" style="width: 5.9405%;">
 				<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
-     PID|…
+     PID|
     </span>
 				<br/>
 			</td>
@@ -52,7 +52,7 @@
 		<tr>
 			<td class="fr-thick" style="width: 5.9405%;">
 				<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
-     ORC|…
+     ORC|
     </span>
 				<br/>
 			</td>
@@ -63,7 +63,7 @@
 		<tr>
 			<td class="fr-thick" style="width: 5.9405%;">
 				<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
-     RXA|…
+     RXA|
     </span>
 				<br/>
 			</td>
@@ -100,7 +100,7 @@
  </span>
 </p>
 <p>
- This PID segment includes a medical record number and a person’s name.
+ This PID segment includes a medical record number and a person's name.
 </p>
 <p>
 	<strong>
