--- a/3.HL7 Messaging Infrastructure/3.Basic Message Processing Rules/1.Message Acknowledgement .html
+++ b/3.HL7 Messaging Infrastructure/3.Basic Message Processing Rules/1.Message Acknowledgement .html
@@ -12,7 +12,7 @@
   Notification of errors and rejected data alerts sender that message has errors and may require correction
  </li>
 	<li>
-  Alerting sending user that the data did not get into the receiver’s system
+  Alerting sending user that the data did not get into the receiver's system
  </li>
 </ul>
 <p>
