--- a/3.HL7 Messaging Infrastructure/4.Usage Conformance Testing Recommendations/3.Sending and Receiving Application Conformance Requirements.html
+++ b/3.HL7 Messaging Infrastructure/4.Usage Conformance Testing Recommendations/3.Sending and Receiving Application Conformance Requirements.html
@@ -49,14 +49,14 @@
     <strong>
      SHALL
     </strong>
-    implement “R” elements.
+    implement "R" elements.
    </td>
 			<td class="fr-thick" style="width: 25.0000%;">
     The application
     <strong>
      SHALL
     </strong>
-    populate “R” elements with a non-empty value.
+    populate "R" elements with a non-empty value.
    </td>
 		</tr>
 		<tr>
@@ -71,14 +71,14 @@
     <strong>
      SHALL
     </strong>
-    implement “RE” elements.
+    implement "RE" elements.
    </td>
 			<td class="fr-thick" style="width: 25.0000%;">
     The application
     <strong>
      SHALL
     </strong>
-    populate “RE” elements with a non-empty value if there is relevant data. The term “relevant” has a confounding interpretation in this definition.
+    populate "RE" elements with a non-empty value if there is relevant data. The term "relevant" has a confounding interpretation in this definition.
     <sup>
      19
     </sup>
@@ -93,11 +93,11 @@
     Conditional
    </td>
 			<td class="fr-thick" colspan="2" style="width: 49.931%;">
-    An element with a conditional usage code has an associated condition predicate that determines the operational requirements (usage code) of the element. If the condition predicate associated with the element is true, follow the rules for a which shall be one of “R”, “RE”, “O” or X”:
+    An element with a conditional usage code has an associated condition predicate that determines the operational requirements (usage code) of the element. If the condition predicate associated with the element is true, follow the rules for a which shall be one of "R", "RE", "O" or X":
     <br/>
 				<br/>
 				<p>
-     If the condition predicate associated with the element is false, follow the rules for b which shall be one of “R”, “RE”, “O” or X”. a and b can be valued the same.
+     If the condition predicate associated with the element is false, follow the rules for b which shall be one of "R", "RE", "O" or X". a and b can be valued the same.
     </p>
 				<p>
      Note: when C(O/X) or similar is used a condition predicate will not be provided.
@@ -116,14 +116,14 @@
     <strong>
      SHALL NOT
     </strong>
-    implement “X” elements.
+    implement "X" elements.
    </td>
 			<td class="fr-thick" style="width: 25.0000%;">
     The application
     <strong>
      SHALL NOT
     </strong>
-    populate “X” elements.
+    populate "X" elements.
    </td>
 		</tr>
 		<tr>
@@ -156,7 +156,7 @@
 		<tr>
 			<td class="fr-thick" colspan="4" style="width: 99.931%; text-align: center;">
 				<strong>
-     TABLE 3-2B RECEIVING APPLICATION CONFORMANCE
+     TABLE 3-2B RECEIVING-APPLICATION CONFORMANCE
     </strong>
 				<br/>
 			</td>
@@ -203,7 +203,7 @@
     <strong>
      SHALL
     </strong>
-    implement “R” elements.
+    implement "R" elements.
     <br/>
 			</td>
 			<td class="fr-thick" style="width: 25.0000%;">
@@ -238,7 +238,7 @@
     <strong>
      SHALL
     </strong>
-    implement “RE” elements.
+    implement "RE" elements.
    </td>
 			<td class="fr-thick" style="width: 25.0000%;">
     The receiving application
@@ -275,11 +275,11 @@
      <strong>
       SHALL
      </strong>
-     be one of “R”, “RE”, “O” or X” (If the condition predicate associated with the element is false, follow the rules for b which
+     be one of "R", "RE", "O" or X" (If the condition predicate associated with the element is false, follow the rules for b which
      <strong>
       SHALL
      </strong>
-     be one of “R”, “RE”, “O” or X”.a and b can be the same.)
+     be one of "R", "RE", "O" or X".a and b can be the same.)
     </p>
 				<p>
      Note: when C(O/X) or similar is used a condition predicate will not be provided.
@@ -298,7 +298,7 @@
     <strong>
      SHALL NOT
     </strong>
-    implement “X” elements.
+    implement "X" elements.
     <br/>
 			</td>
 			<td class="fr-thick" style="width: 25.0000%;">
