--- a/3.HL7 Messaging Infrastructure/5.Message Element Attributes.html
+++ b/3.HL7 Messaging Infrastructure/5.Message Element Attributes.html
@@ -72,7 +72,7 @@
      The whole block is optional.
     </p>
 				<p>
-     Note that for Segment Groups there will not be a segment code present, but the square and curly braces will still be present. The square and curly braces are not part of the HL7  message and exist only in the documentation in order to define the Segment Groups.
+     Note that for Segment Groups there will not be a segment code present, but the square and curly braces will still be present. The square and curly braces are not part of the HL7 message and exist only in the documentation in order to define the Segment Groups.
     </p>
 			</td>
 		</tr>
@@ -191,7 +191,7 @@
 	<sup>
   19
  </sup>
- There are multiple interpretations of “RE” when a value is known. One is “the capability must always be supported and a value is sent if known”, the other is “the capability must always be supported and a value may or may not be sent even when known based on a condition external to the profile specification. The condition may be noted in the profile but cannot be processed automatically”. This is what can be interpreted from the “relevant” part of the definition. Regardless of the interpretation of the “RE” usage code, a set of test circumstances can be developed to sufficiently test the “RE” element. See the “Conformity Assessment of Conformance Constructs” section for more details.
+ There are multiple interpretations of "RE" when a value is known. One is "the capability must always be supported and a value is sent if known", the other is the capability must always be supported and a value may or may not be sent even when known based on a condition external to the profile specification. The condition may be noted in the profile but cannot be processed automatically. This is what can be interpreted from the "relevant" part of the definition. Regardless of the interpretation of the "RE" usage code, a set of test circumstances can be developed to sufficiently test the "RE" element. See the "Conformity Assessment of Conformance Constructs" section for more details.
 </p>
 <p>
 	<sup>
