--- a/5.Batch File Specifications/1.Sending Messages in a Batch.html
+++ b/5.Batch File Specifications/1.Sending Messages in a Batch.html
@@ -21,7 +21,7 @@
 </p>
 <p style="margin-left: 20px;">
 	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
-  …
+  &nbsp;
  </span>
 </p>
 <p style="margin-left: 20px;">
@@ -54,7 +54,7 @@
 </p>
 <p style="margin-left: 20px;">
 	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
-  …
+  &nbsp;
  </span>
 </p>
 <p style="margin-left: 20px;">
@@ -74,7 +74,7 @@
 </p>
 <p style="margin-left: 20px;">
 	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
-  …
+  &nbsp;
  </span>
 </p>
 <p style="margin-left: 20px;">
@@ -84,7 +84,7 @@
 </p>
 <p style="margin-left: 20px;">
 	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
-  …
+  &nbsp;
  </span>
 </p>
 <p style="margin-left: 20px;">
