--- a/6.Change History.html
+++ b/6.Change History.html
@@ -173,7 +173,7 @@
     Chapter 5, p72 and throughout Guide
    </td>
 			<td style="width: 75.3334%;">
-    Changed “null” to “empty” in data types, fields and segments. In some cases deleted contents of cell
+    Changed "null" to "empty" in data types, fields and segments. In some cases deleted contents of cell
     <br/>
 			</td>
 		</tr>
@@ -340,7 +340,7 @@
 		</tr>
 		<tr>
 			<td style="width: 27.1543%;">
-    Chapter 2, Use Case 9 – report error
+    Chapter 2, Use Case 9 &mdash; report error
    </td>
 			<td style="width: 72.7766%;">
     Added clarifying statement.
@@ -835,7 +835,7 @@
     <br/>
 			</td>
 			<td style="width: 62.6268%;">
-    Set MSH-15 and MSH-16 to “NE”
+    Set MSH-15 and MSH-16 to "NE"
     <br/>
 			</td>
 		</tr>
@@ -994,10 +994,10 @@
 			<td style="width: 62.6268%;">
     Usage is required (R)
     <p>
-     Z32,Z42,Z23,Z31 and Z33 set to “NE”,
+     Z32,Z42,Z23,Z31 and Z33 set to "NE",
     </p>
 				<p>
-     Z22,Z34 and Z44 set to “ER”
+     Z22,Z34 and Z44 set to "ER"
     </p>
 			</td>
 		</tr>
@@ -1011,10 +1011,10 @@
      Usage is required (R)
     </p>
 				<p>
-     Z32,Z42,Z23,Z31 and Z33 set to “NE”,
+     Z32,Z42,Z23,Z31 and Z33 set to "NE",
     </p>
 				<p>
-     Z22,Z34 and Z44 set to “AL”
+     Z22,Z34 and Z44 set to "AL"
     </p>
 			</td>
 		</tr>
@@ -1278,7 +1278,7 @@
     <br/>
 			</td>
 			<td style="width: 62.6268%;">
-    Changed usage to C(R/O). Deleted guidance indicating that an empty field meant “A”.
+    Changed usage to C(R/O). Deleted guidance indicating that an empty field meant "A".
    </td>
 		</tr>
 		<tr>
@@ -1304,7 +1304,7 @@
     RXA-6
    </td>
 			<td style="width: 62.6268%;">
-    Conformance statement requiring “999” for non-administered doses.
+    Conformance statement requiring "999" for non-administered doses.
    </td>
 		</tr>
 		<tr>
@@ -1322,7 +1322,7 @@
     <br/>
 			</td>
 			<td style="width: 62.6268%;">
-    Updated Use Cases. Collapse “send” and “receive” use cases into one use case. Added use case for request evaluated history and forecast.
+    Updated Use Cases. Collapse "send" and "receive" use cases into one use case. Added use case for request evaluated history and forecast.
     <br/>
 			</td>
 		</tr>
