--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/1.Core Data Elements for Immunization History.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/1.Core Data Elements for Immunization History.html
@@ -77,10 +77,10 @@
 		</tr>
 		<tr>
 			<td class="fr-thick" style="width: 25.0000%;">
-    Mother’s Maiden Name
+    Mother's Maiden Name
    </td>
 			<td class="fr-thick" style="width: 25.0000%;">
-    The family name of the person’s mother. This is an important key to assuring an accurate match.
+    The family name of the person's mother. This is an important key to assuring an accurate match.
    </td>
 			<td class="fr-thick" style="width: 25.0000%;">
     Required
@@ -94,7 +94,7 @@
     Race
    </td>
 			<td class="fr-thick" style="width: 25.0000%;">
-    Patient’s self-reported race.
+    Patient's self-reported race.
    </td>
 			<td class="fr-thick" style="width: 25.0000%;">
     Required
@@ -108,7 +108,7 @@
     Ethnicity
    </td>
 			<td class="fr-thick" style="width: 25.0000%;">
-    Patient’s self-reported ethnicity
+    Patient's self-reported ethnicity
    </td>
 			<td class="fr-thick" style="width: 25.0000%;">
     Required
@@ -206,7 +206,7 @@
     Client address
    </td>
 			<td class="fr-thick" style="width: 25.0000%;">
-    Address of the client’s residence
+    Address of the client's residence
    </td>
 			<td class="fr-thick" style="width: 25.0000%;">
     Required
