--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/2.Send Immunization History (VXU)/10.Example VXU #9 - Recording Birth Information.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/2.Send Immunization History (VXU)/10.Example VXU #9 - Recording Birth Information.html
@@ -98,7 +98,7 @@
     <br/>
 			</td>
 			<td style="width: 33.3333%;">
-    Children’s Hospital
+    Children's Hospital
     <br/>
 			</td>
 		</tr>
