--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/2.Send Immunization History (VXU)/3.Example VXU #2 - Indicate client eligibility status for a funding program for vaccines administered.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/2.Send Immunization History (VXU)/3.Example VXU #2 - Indicate client eligibility status for a funding program for vaccines administered.html
@@ -14,5 +14,5 @@
 	<br/>
 </p>
 <p>
- Immunization messages must be able to convey the eligibility status of a recipient when they received immunizations. That is, for each dose administered, the person’s eligibility should be recorded. Eligibility refers to what funding program should pay for the vaccine. This is distinctly different from funding source, which refers to what funding program actually paid for the vaccine. This document will illustrate the former.
+ Immunization messages must be able to convey the eligibility status of a recipient when they received immunizations. That is, for each dose administered, the person's eligibility should be recorded. Eligibility refers to what funding program should pay for the vaccine. This is distinctly different from funding source, which refers to what funding program actually paid for the vaccine. This document will illustrate the former.
 </p>
