--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/2.Send Immunization History (VXU)/3.Example VXU #2 - Indicate client eligibility status for a funding program for vaccines administered/2.Patient Eligibility Status.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/2.Send Immunization History (VXU)/3.Example VXU #2 - Indicate client eligibility status for a funding program for vaccines administered/2.Patient Eligibility Status.html
@@ -12,13 +12,13 @@
  The method of capture is messaged in OBX-17 (observation method). If the eligibility is captured by vaccine dose, OBX-17 will be valued:
 </p>
 <p>
- “VXC40^per immunization^CDCPHINVS”
+ "VXC40^per immunization^CDCPHINVS"
 </p>
 <p>
  If the method of capture is per visit, OBX-17 shall be valued:
 </p>
 <p>
- “VXC41^per visit^CDCPHINV”
+ "VXC41^per visit^CDCPHINV"
 </p>
 <p>
  Patient Eligibility Status is conveyed in an OBX segment for each vaccine dose administered. While this document will describe how to accomplish this in an HL7 message and give a high-level view of patient eligibility status, readers should refer to the MIROW document for a complete understanding of correct usage.
@@ -33,7 +33,7 @@
 	<tbody>
 		<tr>
 			<td class="fr-thick" style="width: 100.0000%;">
-    Technical Note: The design of the information systems interface and validation functionality should ensure a match between reported/messaged Patient Eligibility Status and administered Vaccine Eligibility Status – they have to be eligible for the same funding program. The following table is an illustration of the logic found in Table 0064.
+    Technical Note: The design of the information systems interface and validation functionality should ensure a match between reported/messaged Patient Eligibility Status and administered Vaccine Eligibility Status &mdash; they have to be eligible for the same funding program. The following table is an illustration of the logic found in Table 0064.
     <br/>
 			</td>
 		</tr>
@@ -43,7 +43,7 @@
 	<br/>
 </p>
 <p>
- Note that a person can’t be eligible for VFC and a state program for the same immunization. That is, only one eligibility should apply to a given immunization.
+ Note that a person can't be eligible for VFC and a state program for the same immunization. That is, only one eligibility should apply to a given immunization.
 </p>
 <p>
 	<br/>
@@ -173,7 +173,7 @@
     <br/>
 				<br/>
 				<p>
-     The formal short name for this LOINC code is “Vaccine fund pgm elig cat”, this means it is the patient eligibility status associated with a vaccine dose administered.
+     The formal short name for this LOINC code is "Vaccine fund pgm elig cat", this means it is the patient eligibility status associated with a vaccine dose administered.
     </p>
 			</td>
 		</tr>
