--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/2.Send Immunization History (VXU)/6.Example VXU #5 - Delete an Immunization Record.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/2.Send Immunization History (VXU)/6.Example VXU #5 - Delete an Immunization Record.html
@@ -1,5 +1,5 @@
 <p>
- There are occasions when a system that has sent an immunization record to another system wishes to delete the record on the other system. Each system may have rules about the requester’s right to delete records.
+ There are occasions when a system that has sent an immunization record to another system wishes to delete the record on the other system. Each system may have rules about the requester's right to delete records.
 </p>
 <p>
  If a system allows deletions by HL7 message, use the RXA-21, Action Code to request deletion of a specific record. The following diagram illustrates how the ORC-3 may be used to identify an immunization record for deletion
