--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/2.Send Immunization History (VXU)/8.Example VXU #7 - Send Information Indicating Immunization Refusal.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/2.Send Immunization History (VXU)/8.Example VXU #7 - Send Information Indicating Immunization Refusal.html
@@ -12,7 +12,7 @@
  </span>
 </p>
 <p>
- This example shows that on 10/10/2009 this client’s parent refused to have the child receive a DTAP immunization. Note that the ORC is still required. Filler Order Number is still required, but meaningless.
+ This example shows that on 10/10/2009 this client's parent refused to have the child receive a DTAP immunization. Note that the ORC is still required. Filler Order Number is still required, but meaningless.
 </p>
 <p>
 	<br/>
