--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/3.Send An Acknowledgement (ACK) In Response To A VXU/2.Send Error In ACK/1.Acknowledging An Error That Causes Message Rejection (AR Response).html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/3.Send An Acknowledgement (ACK) In Response To A VXU/2.Send Error In ACK/1.Acknowledging An Error That Causes Message Rejection (AR Response).html
@@ -13,7 +13,7 @@
 </p>
 <p>
 	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
-  ERR||MSH^1^12|203^unsupported version id^^HL70357|E||||Unsupported HL7 Version ID—Message rejected&lt;CR&gt;
+  ERR||MSH^1^12|203^unsupported version id^^HL70357|E||||Unsupported HL7 Version ID&mdash;Message rejected&lt;CR&gt;
  </span>
 </p>
 <p>
