--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/3.Send An Acknowledgement (ACK) In Response To A VXU/2.Send Error In ACK/2.Acknowledging An HL7 Processing Error That Causes Message Rejection AE Response).html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/3.Send An Acknowledgement (ACK) In Response To A VXU/2.Send Error In ACK/2.Acknowledging An HL7 Processing Error That Causes Message Rejection AE Response).html
@@ -10,7 +10,7 @@
  </li>
 </ul>
 <p>
- The following example reports that the PID-5 (patient name) was missing. It is a required field. This leads to rejection of the PID segment. Because this is an error, the MSA-1 reports an error (“AE”). This error caused the receiving system to identify this as a serious error with data loss. ERR-4 (severity) is set to ‘E’. Note that ERR-8 contains a free text note about the error. These are generated locally by the responding system. They may be standardized locally.
+ The following example reports that the PID-5 (patient name) was missing. It is a required field. This leads to rejection of the PID segment. Because this is an error, the MSA-1 reports an error ("AE"). This error caused the receiving system to identify this as a serious error with data loss. ERR-4 (severity) is set to "E". Note that ERR-8 contains a free text note about the error. These are generated locally by the responding system. They may be standardized locally.
 </p>
 <p>
 	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
