--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/3.Send An Acknowledgement (ACK) In Response To A VXU/2.Send Error In ACK/3.Acknowledging An HL7 Processing Error That Causes Segment Group Rejection.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/3.Send An Acknowledgement (ACK) In Response To A VXU/2.Send Error In ACK/3.Acknowledging An HL7 Processing Error That Causes Segment Group Rejection.html
@@ -13,12 +13,12 @@
 </p>
 <p>
 	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
-  ERR||RXA^1^5|103^table value not found^HL70357|E|5^table value not found^HL70533||||Vaccine code not recognized—field rejected &lt;CR&gt;
+  ERR||RXA^1^5|103^table value not found^HL70357|E|5^table value not found^HL70533||||Vaccine code not recognized-field rejected &lt;CR&gt;
  </span>
 </p>
 <p>
 	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
-  ERR||RXA^1^5|101^required field missing^HL70357|E|7^required data  missing^HL70533||||RXA-5 is required segment rejected&lt;CR&gt;
+  ERR||RXA^1^5|101^required field missing^HL70357|E|7^required data missing^HL70533||||RXA-5 is required segment rejected&lt;CR&gt;
  </span>
 </p>
 <p>
