--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/3.Send An Acknowledgement (ACK) In Response To A VXU/2.Send Error In ACK/6.Acknowledging an Application Error That Causes Message Rejection Due to Local Business Rule Violation.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/3.Send An Acknowledgement (ACK) In Response To A VXU/2.Send Error In ACK/6.Acknowledging an Application Error That Causes Message Rejection Due to Local Business Rule Violation.html
@@ -1,5 +1,5 @@
 <p>
- The following example shows an error that causes an error based on the application rules or functioning. A local business rule may be that “The date of birth shall be on or before today.” If a message were received with a birth date in the future for the patient, the application would generate an error. The field would be treated as empty. The field is a Required field in a Required Segment (Not part of a segment group). The message is rejected.
+ The following example shows an error that causes an error based on the application rules or functioning. A local business rule may be that "The date of birth shall be on or before today." If a message were received with a birth date in the future for the patient, the application would generate an error. The field would be treated as empty. The field is a Required field in a Required Segment (Not part of a segment group). The message is rejected.
 </p>
 <p>
 	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
