--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/4.Example Return An Evaluated History and Forecast (RSP(Z42))/2.Indicating Vaccine Group Associated.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/4.Example Return An Evaluated History and Forecast (RSP(Z42))/2.Indicating Vaccine Group Associated.html
@@ -31,7 +31,7 @@
  </span>
 </p>
 <p>
- … evaluation observations about this vaccine group
+ evaluation observations about this vaccine group
 </p>
 <p>
 	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
@@ -39,7 +39,7 @@
  </span>
 </p>
 <p>
- … evaluation observations about this vaccine group
+ evaluation observations about this vaccine group
 </p>
 <p>
 	<br/>
