--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/4.Example Return An Evaluated History and Forecast (RSP(Z42))/8.Important Notes.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/4.Example Return An Evaluated History and Forecast (RSP(Z42))/8.Important Notes.html
@@ -13,7 +13,7 @@
       Either of the LOINC for vaccine group could have been used under the combination vaccine (30956-7 (vaccine type) or 38890-0 (component vaccine type)), but 30956-7 is preferred.
      </li>
 					<li>
-      If VIS observation (OBX) is included in the above message, it requires its’ own OBX with vaccine group and has a different sub-id from the evaluation observations.
+      If VIS observation (OBX) is included in the above message, it requires its own OBX with vaccine group and has a different sub-id from the evaluation observations.
      </li>
 				</ol>
 			</td>
