--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/4.Example Return An Evaluated History and Forecast (RSP(Z42))/9.Using The NTE Segment Associated With An OBX To Provide More Information.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/4.Example Return An Evaluated History and Forecast (RSP(Z42))/9.Using The NTE Segment Associated With An OBX To Provide More Information.html
@@ -10,7 +10,7 @@
 			<td class="fr-thick" style="width: 100.0000%;">
 				<ol>
 					<li>
-      There are some series where doses may be skipped. For instance, a person who gets significantly behind on some HIB series may skip a dose and complete “early”. Local profiles should specify how these doses will be handled and messaged.
+      There are some series where doses may be skipped. For instance, a person who gets significantly behind on some HIB series may skip a dose and complete "early". Local profiles should specify how these doses will be handled and messaged.
      </li>
 					<li>
       Some vaccines have a numbered primary series and are followed by intermittent booster doses. These do not increase the number of doses in the primary series.
