--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/5.Send a Request for Complete Immunization History (QBP/RSP)/1.Process For Requesting Immunization History.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/5.Send a Request for Complete Immunization History (QBP/RSP)/1.Process For Requesting Immunization History.html
@@ -8,7 +8,7 @@
 	<tbody>
 		<tr>
 			<td class="fr-thick" style="width: 100.0000%;">
-    When a client is does not want his/her data shared and is found, local business rules need to be applied. For instance, some applications may behave as if the client record does not exist in the system. That is, it would respond with a “no records found” message. The exception to this would be if the requesting provider were the one who set the protection indicator. In this case, the person may be a candidate that is returned. Another response might be to send limited information notifying the requesting system that the person exists but wants his/her records protected.
+    When a client is does not want his/her data shared and is found, local business rules need to be applied. For instance, some applications may behave as if the client record does not exist in the system. That is, it would respond with a "no records found" message. The exception to this would be if the requesting provider were the one who set the protection indicator. In this case, the person may be a candidate that is returned. Another response might be to send limited information notifying the requesting system that the person exists but wants his/her records protected.
    </td>
 		</tr>
 	</tbody>
@@ -78,7 +78,7 @@
  </span>
 </p>
 <p>
- This query is being sent from a system with a name space identifier of MYEHR. It is requesting an immunization history for a person named Bobbie Q Child. His mother’s maiden name was Suzy Que. He was born 5/12/2005 and lives at 10 East Main St, Myfaircity, Georgia. His medical record number with MYEHR is 12345. The most records that the requesting system wants returned if lower confidence candidates are returned is 5. Processing is expected to be “immediate”.
+ This query is being sent from a system with a name space identifier of MYEHR. It is requesting an immunization history for a person named Bobbie Q Child. His mother's maiden name was Suzy Que. He was born 5/12/2005 and lives at 10 East Main St, Myfaircity, Georgia. His medical record number with MYEHR is 12345. The most records that the requesting system wants returned if lower confidence candidates are returned is 5. Processing is expected to be "immediate".
 </p>
 <p>
 	<br/>
