--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/5.Send a Request for Complete Immunization History (QBP/RSP)/2.Returning A List Of Candidate Clients In Response To QBP^Q11 Query.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/5.Send a Request for Complete Immunization History (QBP/RSP)/2.Returning A List Of Candidate Clients In Response To QBP^Q11 Query.html
@@ -8,7 +8,7 @@
 	<tbody>
 		<tr>
 			<td class="fr-thick" style="width: 100.0000%;">
-    Note that PID-1, Set Id, is required when returning a list of PID. It is incremented for each PID returned (i.e. 1,2,3…)
+    Note that PID-1, Set Id, is required when returning a list of PID. It is incremented for each PID returned (i.e. 1,2,3&hellip;)
     <br/>
 			</td>
 		</tr>
