--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/6.Acknowledging Query That Returns No Clients/Patients/4.Message Is Rejected Due To Unrecognized Message Type.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/6.Acknowledging Query That Returns No Clients/Patients/4.Message Is Rejected Due To Unrecognized Message Type.html
@@ -25,7 +25,7 @@
 	<sup>
   29
  </sup>
- PD1-16 indicates the status from the message sender’s perspective. In the case of a message coming from a provider, it indicates if the client is an active patient of that sender.
+ PD1-16 indicates the status from the message sender's perspective. In the case of a message coming from a provider, it indicates if the client is an active patient of that sender.
 </p>
 <p>
 	<sup>
