--- a/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/3.Data Types and Data Type Flavors.html
+++ b/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/3.Data Types and Data Type Flavors.html
@@ -1,5 +1,5 @@
 <p>
- IGAMT allows users to create Data Type flavors, which are data types that are derived from the HL7 v2.5.1 standard. The naming convention that was adopted for data type flavors in IGAMT affixes a postfix of “IZ” and the version number of the flavor to the base data type (e.g., CE_IZ01). In the National IG, data type flavors do exist, however, data type flavors are not titled to indicated differentiation. For example, there is one DTM flavor mentioned in the National IG, but there are multiple DTM flavors specified within the TS data type flavors.
+ IGAMT allows users to create Data Type flavors, which are data types that are derived from the HL7 v2.5.1 standard. The naming convention that was adopted for data type flavors in IGAMT affixes a postfix of "IZ" and the version number of the flavor to the base data type (e.g., CE_IZ01). In the National IG, data type flavors do exist, however, data type flavors are not titled to indicated differentiation. For example, there is one DTM flavor mentioned in the National IG, but there are multiple DTM flavors specified within the TS data type flavors.
 </p>
 <p>
  Additionally, within the following data types, the newly differentiated IZ flavor data types were used in subcomponents where applicable:
