--- a/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/7.Segment Differences from the National IG Due to Conformance Methodology in IGAMT.html
+++ b/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/7.Segment Differences from the National IG Due to Conformance Methodology in IGAMT.html
@@ -1,8 +1,8 @@
 <p>
- In the table below, a consolidated information on each segment flavor’s differences from the National IG are presented. For segments where there is more than one flavor, a numeric postfix is added and differences between the consolidated IG and the IG in IGAMT are noted. Only columns and fields with pertinent information are included in the tables below. Additionally, for cells that contain no information, this indicates there was no change from the National IG to the IG in IGAMT. The “Data Type” column indicates instances where a data type flavor was used. The “Value Set” column indicates instances where a value set flavor was used. Value set information has two associated columns that are required in IGAMT: binding strength and binding location. Binding strength indicates whether the value set is required to be used (R), suggested to be used (S), or not specified (blank). Binding location indicates the location of the subcomponent where the code should be sent for complex data types. For example, CWE.1 indicates that the value set code should be sent in the first subcomponent of the CWE data type. Information on cardinality and length changes are also included in the tables. Length information is provided but is not enforceable. Also note, that a length value of “length not included” indicates a field where length was provided for a complex data type in the National IG, but length information was not included in IGAMT. Length information was not included in IGAMT, as newer conformance methodology deprecated length for complex data types. Finally, segments with important changes are noted at the beginning of each table.
+ In the table below, a consolidated information on each segment flavor's differences from the National IG are presented. For segments where there is more than one flavor, a numeric postfix is added and differences between the consolidated IG and the IG in IGAMT are noted. Only columns and fields with pertinent information are included in the tables below. Additionally, for cells that contain no information, this indicates there was no change from the National IG to the IG in IGAMT. The "Data Type" column indicates instances where a data type flavor was used. The "Value Set" column indicates instances where a value set flavor was used. Value set information has two associated columns that are required in IGAMT: binding strength and binding location. Binding strength indicates whether the value set is required to be used (R), suggested to be used (S), or not specified (blank). Binding location indicates the location of the subcomponent where the code should be sent for complex data types. For example, CWE.1 indicates that the value set code should be sent in the first subcomponent of the CWE data type. Information on cardinality and length changes are also included in the tables. Length information is provided but is not enforceable. Also note, that a length value of "length not included" indicates a field where length was provided for a complex data type in the National IG, but length information was not included in IGAMT. Length information was not included in IGAMT, as newer conformance methodology deprecated length for complex data types. Finally, segments with important changes are noted at the beginning of each table.
 </p>
 <p>
- Table 12: Conformance  Segment Changes by Field1 (Suggested Sub, Sub, Sub Section)
+ Table 12: Conformance &mdash; Segment Changes by Field1 (Suggested Sub, Sub, Sub Section)
 </p>
 <p>
  ERR_IZ Segment
@@ -2566,7 +2566,7 @@
 			</td>
 			<td data-celllook="4369">
 				<p>
-     Changed to “O” for Z32 profile
+     Changed to "O" for Z32 profile
     </p>
 			</td>
 			<td data-celllook="69905">
@@ -7311,7 +7311,7 @@
 			</td>
 			<td data-celllook="69905">
 				<p>
-     Changed to “RE” for Z42 profile
+     Changed to "RE" for Z42 profile
     </p>
 			</td>
 			<td data-celllook="69905">
