--- a/2.Actors, Goals, and Messaging Transactions/3.Use Case Descriptions/3.Use Case 3 - Request Evaluated History and Forecast.html
+++ b/2.Actors, Goals, and Messaging Transactions/3.Use Case Descriptions/3.Use Case 3 - Request Evaluated History and Forecast.html
@@ -6,7 +6,7 @@
 </p>
 <p>
 	<strong>
-  Supporting HL7 Version 2.5.1 Message Type: QBP –Profile Z44 and RSP –Profile Z42.
+  Supporting HL7 Version 2.5.1 Message Type: QBP &mdash; Profile Z44 and RSP &mdash; Profile Z42.
  </strong>
 </p>
 <p>
