--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/2.Send Immunization History (VXU)/2.Example VXU #1 - Basic Message/1.Storyboard.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/2.Send Immunization History (VXU)/2.Example VXU #1 - Basic Message/1.Storyboard.html
@@ -1,5 +1,5 @@
 <p>
- On 01/13/2012 Mom brought her son, Johnny New Patient (male), to the clinic. He was born 4/14/11. He has had 1 dose of Hep B on 4/15/11, according to the medical record brought in by Mom (Sally Patient). They live at 123 Any Street, Somewhere, Wisconsin 54000. Mom gives her maiden name as Lastname. Johnny’s mom indicates that he is Native American and not Hispanic. There home phone number is (111)232-0112.
+ On 01/13/2012 Mom brought her son, Johnny New Patient (male), to the clinic. He was born 4/14/11. He has had 1 dose of Hep B on 4/15/11, according to the medical record brought in by Mom (Sally Patient). They live at 123 Any Street, Somewhere, Wisconsin 54000. Mom gives her maiden name as Lastname. Johnny's mom indicates that he is Native American and not Hispanic. There home phone number is (111)232-0112.
 </p>
 <p>
  Mom was given the Vaccine Information Sheet (VIS) that covered the following vaccine types:
